swagger tag e refatoração filtragem por tag
